Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE.html> 
+<!DOCTYPE html> 
 
 <html>
   <head>
@@ -11,9 +11,9 @@
    <h1 style =" font: Impact;">
    	Hi, I'm Jahsan 
    </h1>
-  <P> I'm a Freshman at LHS. I play varsity football for lansingburgh high school.
+  <p> I'm a Freshman at LHS. I play varsity football for lansingburgh high school.
 
-  </P>
+  </p>
   <a href="Http://www.edu/classes/mcdonough/fonts.htm"> 
   This is a link to fonts </a>
 <img  src ="dog.jpg" height ="200" width ="350"> </img> 
